k8s/platform/ingress/haproxy-ingress/shared-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bizkit-ingress
  namespace: prod-system
  labels:
    app.kubernetes.io/name: bizkit-ingress
    app.kubernetes.io/part-of: bizkit
    app.kubernetes.io/component: ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: cardcaro.com,dev.cardcaro.com
    bizkit.io/git-sha: REPLACE_ME_GIT_SHA
    bizkit.io/deployed-at: REPLACE_ME_DEPLOYED_AT
    bizkit.io/deployed-by: REPLACE_ME_DEPLOYED_BY
    haproxy-ingress.github.io/timeout-connect: "300s"
    haproxy-ingress.github.io/timeout-http-request: "300s"
    haproxy-ingress.github.io/timeout-keep-alive: "75s"
    haproxy-ingress.github.io/timeout-server: "300s"
    haproxy-ingress.github.io/timeout-tunnel: "300s"
spec:
  ingressClassName: haproxy
  rules:
    - host: dev.cardcaro.com
      http:
        paths:
          - path: /api/ws
            pathType: Prefix
            backend:
              service:
                name: be-dev-proxy
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: be-dev-proxy
                port:
                  number: 8080
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-api-dev-proxy
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-dev-proxy
                port:
                  number: 3000
    - host: cardcaro.com
      http:
        paths:
          - path: /api/ws
            pathType: Prefix
            backend:
              service:
                name: be-prod-proxy
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: be-prod-proxy
                port:
                  number: 8080
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-api-prod-proxy
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-prod-proxy
                port:
                  number: 3000
